# wgwg

./: .gitignore  .python-version  AGENTS.md  CLAUDE.md  CODE_STRUCTURE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: README.md  agent.py  agent_multi.py  agent_with_chat.py  ai_chat_handler.py  app_state.py  chat_room_handler.py  chat_server.py  instructions.py  main.py  personas.py  prompts.py  requirements.txt  sc_handler.py
client/: package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/analyze/: route.ts
client/app/chat/: page.tsx
client/app/chat/[id]/: page.tsx
client/app/visualize/: page.tsx
client/components/: Slider.tsx
client/components/ui/: card.tsx  input.tsx
client/lib/: redis.ts
docs/: ontology-decision-framework.md  ontology_consistency_plan.md
python/: bb.py  free_cli.py  send_cli.py  set_cli.py  test.py
sc/: cmd_receive.scd  osc_recv.scd  passion.scd  sc_pat_prompt.txt  sc_prompt.txt  sc_prompt_eng.txt  sc_synth_prompt.txt  sc코드를요청하는프롬프트.txt  test.scd
server/: README.md  client.py  package-lock.json  package.json  vue.config.js
server/backend/: .python-version  README.md  agent.py  agent_multi.py  agents_.py  chat_server.py  langgraph_agentic_rag.ipynb  main.py  pyproject.toml  requirements.txt
server/src/: App.css  App.vue
