[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-xai>=0.2.5",
]
